# ovh-dedicated-server-api

./: Dockerfile  Makefile  README.md  ovh_dedicated.py  passenger_wsgi.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  deploy.yml  publish.yml
