[project]
name = "ovh-dedicated-cli"
version = "0.1.3"
description = "OVH Dedicated Servers CLI + minimal Web API (Flask) using OVH v1 signing"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "you" }]
license = { text = "MIT" }

dependencies = [
  "requests>=2.32.3,<3",
  "Flask>=3.0.0,<4",
  "python-dotenv>=1.0.1,<2",
]

[project.scripts]
ovh-dedicated = "ovh_dedicated:cli_main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

